add solution for lesson 1

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href="pages/task2.html">Задание 2</a></li>
             <li><a href="pages/task3.html">Задание 3</a></li>
         </ul>
-        <p>Решение в source code в каждом задания</p>
+        <p>Решение в source code в каждом задании</p>
     </div>
 </body>
 </html>
