add solution for lesson 2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Урок 1</title>
+    <title>Урок 2</title>
 </head>
 <body>
     <div id="logo">
@@ -16,13 +16,15 @@
     <div id="content">
         <br>
         <h2>Практическая работа</h2>
-        <h2>Урок 1</h2>
+        <h2>Урок 2</h2>
         <ul>
             <li><a href="pages//task.html">Задание 1</a></li>
             <li><a href="pages/task2.html">Задание 2</a></li>
             <li><a href="pages/task3.html">Задание 3</a></li>
+            <li><a href="pages/task4.html">Задание 4</a></li>
+            <li><a href="pages/task5.html">Задание 5</a></li>
+            <li><a href="pages/task6.html">Задание 6</a></li>
         </ul>
-        <p>Решение в source code в каждом задании</p>
     </div>
 </body>
 </html>
